--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 .menu {
-  /* add correct code to place the menu correctly.*/
+  display:flex;
+  justify-content:space-between;
   background-color: black;
   font-size: 30px;
   font-family: sans-serif;
@@ -15,9 +16,6 @@ body {
   display:flex;
   justify-content:space-between;
   font-family: italic;
-    /* display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap; */
 }
 
 .languages {
@@ -28,11 +26,3 @@ body {
   border: 2px solid black;
   border-radius: 30px;
 }
-/* .origami {
-  border-radius: 20px;
-  background-color: white;
-  margin: 20px;
-
-  width: 310px;
-  font-family: fantasy;
-} */
